  or disabled automatically by the Score-P runtime system.
- Adapted remapper specification to reflect that Test/Wait functionality
  is no longer specific to point-to-point communication.
- Support for recording I/O activities: Calls to POSIX I/O and MPI-I/O
  are wrapped and meta data about individual I/O operations is recorded.

Bugfixes:

------------------- Released version 5.0 -----------------------------

Major features:

- Orphan thread support: Score-P now records events from POSIX threads
  that were not instrumented, e.g., threads created from `std::thread`,
  Intel TBB, Intel Cilk Plus, or any other runtime which is based on
  POSIX threads. Previously, events from such threads caused a
  'TPD == 0' measurement abort. Note that if your link-line does not
  need a POSIX thread option like -pthread, you need to use the
  Score-P option `--thread=pthread` to activate this feature.
  This feature also includes support for POSIX threads that are
  running longer than main. For these threads, Score-P will exit all
  active regions and end the thread (from the measurement point of
  view).
- Added support for cartesian topologies.
  Supported topology types:
  1) MPI cartesian topologies via MPI_Cart_create.
  2) Platform/Hardware specific topologies:
     - IBM Blue Gene/Q
     - K Computer
  3) Process x Threads topology: Generic 2D topology,
     currently only for CPU threads.
  4) User topologies via user instrumentation API.
  By default all available topology types will be recorded. They can
  selectively be disabled based on type through environment variables,
  see `scorep-info config-vars`. Viable topology results require a
  distinct thread binding.

Features and improvements:

- Score-P now generates a dynamic `MANIFEST.md` file for each
  experiment and copies files, like the filter or selective
  configuration files, to the experiment directory.
- In profiling mode, add the file `<DATADIR>/scorep/scorep.spec` to