@@ -13,7 +13,7 @@
  * Copyright (c) 2009-2013,
  * University of Oregon, Eugene, USA
  *
- * Copyright (c) 2009-2017,
+ * Copyright (c) 2009-2017, 2019,
  * Forschungszentrum Juelich GmbH, Germany
  *
  * Copyright (c) 2009-2013,
@@ -259,12 +259,14 @@ be used to build Score-P are as follows:
   --enable-debug          activate internal debug output [no]
   --enable-shared[=PKGS]  build shared libraries [default=no]
   --enable-static[=PKGS]  build static libraries [default=yes]
-  --enable-backend-test-runs
+  --enable-backend-test-runs[=recursive]
                Enable execution of tests during 'make check' [no]
                (does not affect building of tests, though). If
                disabled, the files 'check-file-*' and/or
-               'skipped_tests' listing the tests are generated in the
-               corresponding build directory.
+               'skipped_tests', listing the tests, are generated in
+               the corresponding build directory. If 'recursive' is
+               given, execution of tests is enabled for
+               sub-packages as well.
   --enable-cuda
                Enable or disable support for CUDA. Fails if support
                cannot be satisfied but was requested.
