@@ -182,7 +182,7 @@ AC_SCOREP_ERROR_CODES
 AS_IF([test "x${ac_scorep_platform}" = "xbgq"],
     [SCOREP_PAMI])
 AC_SCOREP_RUNTIME_MANAGEMENT_TIMINGS
-AC_SCOREP_BACKEND_TEST_RUNS
+SCOREP_BACKEND_TEST_RUNS
 AC_SCOREP_FORTRAN_SUPPORT_ALLOCATABLE
 SCOREP_THREAD_LOCAL_STORAGE
 SCOREP_SAMPLING
