@@ -16,6 +16,13 @@ Features and improvements:
 
 Bugfixes:
 
+Misc:
+
+- Please note that the semantics of --enable-backend-test-runs changed
+  in Score-P 6.0. The new behavior is to run backend-test-runs for
+  Score-P only, but not for the sub-packages otf2 and cubew. To restore
+  the old behavior, use `--enable-backend-test-runs=recursive`.
+
 ------------------- Released version 5.0 -----------------------------
 
 Major features:
